<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
		    <TextView 
		        android:id="@+id/addTransacaoDialogTxtViewTitle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        style="@style/TextViewTitle"
		        android:text="@string/add_transacao_dialog_title"/>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:gravity="center">
		        
		        <LinearLayout 
		            android:id="@+id/addTransacaoDialogLayoutTipo"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/add_transacao_dialog_tipo"/>
		            
				    <Spinner 
				        android:id="@+id/addTransacaoDialogSpinnerTipo"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"/>
			    </LinearLayout>

				<LinearLayout
					android:id="@+id/addTransacaoDialogLayoutParcelar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="center">

					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="3"
						android:text="@string/add_transacao_dialog_parcelar"/>

					<CheckBox
						android:id="@+id/addTransacaoDialogCheckBoxParcelas"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="7"/>
				</LinearLayout>
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/add_transacao_dialog_valor"/>
				    <EditText 
				        android:id="@+id/addTransacaoDialogEditTxtValor"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"
				        android:gravity="center"
				        android:inputType="numberDecimal"
				        android:hint="@string/add_transacao_dialog_valor_hint"/>
			    </LinearLayout>

				<LinearLayout
					android:id="@+id/addTransacaoDialogLayoutParcelas"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
                    android:visibility="gone"
					android:gravity="center">

					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="3"
						android:text="@string/add_transacao_dialog_parcelas"/>

					<Spinner
						android:id="@+id/addTransacaoDialogSpinnerParcelas"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="7"/>
				</LinearLayout>
			    
			    <LinearLayout 
			        android:id="@+id/addTransacaoDialogLayoutDescricao"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/add_transacao_dialog_descricao"/>
				    <EditText 
				        android:id="@+id/addTransacaoDialogEditTxtDescrição"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"
				        android:gravity="center"
				        android:hint="@string/add_transacao_dialog_descricao_hint"/>
			    </LinearLayout>
			    
	   		    <LinearLayout 
	   		        android:id="@+id/addTransacaoDialogLayoutData"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/add_transacao_dialog_data"/>
				    <Button 
				        android:id="@+id/addTransacaoDialogBtnData"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"
				        android:gravity="center"
				        android:text="04/05/2014"/>
			    </LinearLayout>
			    
	  		    <LinearLayout 
	  		        android:id="@+id/addTransacaoDialogLayoutCategoria"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/add_transacao_dialog_categoria"/>
		            
				    <Spinner 
				        android:id="@+id/addTransacaoDialogSpinnerCategoria"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="6"/>
				    
				    <Button 
				        android:id="@+id/addTransacaoDialogBtnAddCategoria"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="1"
				        android:background="@drawable/ic_action_new"/>
			    </LinearLayout>
			    
	  		    <LinearLayout 
	  		        android:id="@+id/addTransacaoDialogLayoutConta"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/add_transacao_dialog_conta"/>
		            
				    <Spinner 
				        android:id="@+id/addTransacaoDialogSpinnerConta"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"/>
			    </LinearLayout>
			    
			    
		    </LinearLayout>
		    
	    </LinearLayout>
    </ScrollView>

</RelativeLayout>
