<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">
    
	<ScrollView 
        android:layout_width="match_parent"
   	    android:layout_height="wrap_content">
    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        style="@style/TextViewTitle"
		        android:text="@string/transferencia_dialog_title"/>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:gravity="center">
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/transferencia_dialog_valor"/>
				    <EditText 
				        android:id="@+id/transferenciaDialogEditTxtValor"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"
				        android:gravity="center"
				        android:inputType="numberDecimal"
				        android:hint="@string/transferencia_dialog_valor_hint"/>
			    </LinearLayout>
			    
	   		    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/transferencia_dialog_data"/>
				    <Button 
				        android:id="@+id/transferenciaDialogBtnData"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"
				        android:gravity="center"
				        android:text="04/05/2014"/>
			    </LinearLayout>
			    
			    
	  		    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/transferencia_dialog_conta_origem"/>
		            
				    <Spinner 
				        android:id="@+id/transferenciaDialogSpinnerContaOrigem"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"/>
			    </LinearLayout>
			    
			    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center">
		            
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="3"
		                android:text="@string/transferencia_dialog_conta_destino"/>
		            
				    <Spinner 
				        android:id="@+id/transferenciaDialogSpinnerContaDestino"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="7"/>
			    </LinearLayout>
			    
			    
		    </LinearLayout>
		    
	    </LinearLayout>
	</ScrollView>
</RelativeLayout>
