<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="@android:color/white">
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        style="@style/TextViewTitle"
		        android:text="@string/edit_cartao_dialog_title"/>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        
			    <ImageView 
			        android:id="@+id/editCartaoDialogImgIcon"
			        android:layout_width="50dp"
			        android:layout_height="50dp"/>
			    
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical">
				    <EditText 
				        android:id="@+id/editCartaoDialogEditTxtNome"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:hint="@string/add_conta_dialog_nome_hint"/>
				    
				    <EditText 
				        android:id="@+id/editCartaoDialogEditTxtSaldo"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:hint="@string/add_conta_dialog_saldo_hint"
				        android:inputType="numberDecimal"/>
			    </LinearLayout>
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:id="@+id/editCartaoDialogLayoutCartaoCredito"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="Cartão de Crédito"
		            android:gravity="center"/>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center">
		            <TextView 
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="2"
		                android:text="Limite:"/>
		            
		            <EditText 
		                android:id="@+id/editCartaoDialogEditTxtLimite"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
						android:layout_weight="7"
						android:inputType="numberDecimal"/>
		        </LinearLayout>
		        
	    	    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center">
		            <TextView 
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="2"
		            	android:text="@string/edit_cartao_dialog_expire_date"/>
		            <Spinner 
		                android:id="@+id/editCartaoDialogSpinnerVencimento"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
						android:layout_weight="7"
						android:inputType="numberDecimal"
						android:entries="@array/add_conta_dialog_days"/>
		        </LinearLayout>
		        
	    	    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center">
		            <TextView 
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="2"
		                android:text="@string/edit_cartao_dialog_close_date"/>
		            <Spinner 
		                android:id="@+id/editCartaoDialogSpinnerFechamento"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
						android:layout_weight="7"
						android:inputType="numberDecimal"
						android:entries="@array/add_conta_dialog_days"
						/>
		        </LinearLayout>
		    </LinearLayout>
		    
	    </LinearLayout>
	</ScrollView>
</RelativeLayout>
